too much changes are made for seamless flow